--- a/index.html
+++ b/index.html
@@ -33,18 +33,18 @@
         class="navbar-toggler"
         type="button"
         data-toggle="collapse"
-        data-target="#main-navbar"
-        aria-controls="main-navbar"
+        data-target="#main-navbar-opt"
+        aria-controls="main-navbar-opt"
         aria-expanded="false"
         aria-label="Toggle navigation"
       >
         <span class="navbar-toggler-icon"></span>
       </button>
 
-      <div class="collapse navbar-collapse">
+      <div class="collapse navbar-collapse" id="main-navbar-opt">
         <ul class="navbar-nav mx-auto">
           <li class="nav-item active text-center">
-            <a class="nav-link" href="#marriage"
+            <a class="nav-link" href="#welcome"
               >Marriage <span class="sr-only">(current)</span></a
             >
           </li>
@@ -52,13 +52,16 @@
             <a class="nav-link" href="#acceuil">Acceuil</a>
           </li>
           <li class="nav-item text-center">
+            <a class="nav-link" href="#marriage-message">Mariage Message</a>
+          </li>
+          <li class="nav-item text-center">
             <a class="nav-link" href="#program">Programme de la Journée</a>
           </li>
           <li class="nav-item text-center">
-            <a class="nav-link" href="#histoire">Notre Histoire</a>
+            <a class="nav-link" href="#marriage">Le Message</a>
           </li>
           <li class="nav-item text-center">
-            <a class="nav-link" href="#marriage">Mariage</a>
+            <a class="nav-link" href="#histoire">Notre Histoire</a>
           </li>
           <li class="nav-item text-center">
             <a class="nav-link" href="#lieu">Lieu</a>
@@ -70,13 +73,93 @@
       </div>
     </nav>
     <div data-spy="scroll" data-target="#main-navbar" data-offset="0">
-      <div id="marriage"></div>
-      <div id="acceuil"></div>
-      <div id="program"></div>
-      <div id="histoire"></div>
-      <div id="marriage"></div>
-      <div id="lieu"></div>
-      <div id="liste-de-cadeau"></div>
+      <div id="welcome" class="jumbotron paral welcome-tab"></div>
+      <div id="acceuil" class="paral acceuil-tab text-center">
+        <h1 class="main-h1-size">Julie <i class="fa fa-heart"></i> Sammy</h1>
+        <p class="lead">
+          Samedi, 21 Décembre 2019 à 11h 00
+        </p>
+        <p class="lead">Jardins les PALETUVIERS – MATANDA à Bonabéri</p>
+        <p class="lead">MATANDA à Bonabéri</p>
+        <p class="lead">
+          <i class="fa fa-female"></i> <i class="fa fa-male"></i> Code : Tenue
+          de Cocktail
+        </p>
+      </div>
+      <div id="marriage-message" class="paral message-tab text-center">
+        <h1>Bienvenue dans notre monde!</h1>
+        <p class="lead">
+          Nous avions souhaité pouvoir vous fournir quelques informations utiles
+          afin de faciliter votre organisation pour participer au Tome 2 de
+          notre mariage. Votre présence à cet évènement sera réellement un
+          symbole d’amour marquant pour la suite de notre belle histoire, et
+          nous espérons que vos allers-retours/voyages se feront sans
+          complications. Si vous devez vous plaindre de courbatures dès le
+          lendemain, ce serait super que ce soit uniquement dû à
+          l&#39;expression de votre joie débordante tout au long de cette belle
+          journée. Nous frémissons de joie à l&#39;idée de vous compter parmi
+          nous! The Ekambi’s
+        </p>
+      </div>
+      <div id="program" class="paral program-tab text-center">
+        <h1>Programme</h1>
+        <p>
+          PROGRAMME DE LA JOURNEE 10h : Arrivée des invités et Installation 10h
+          30 : Entrée des Demoiselles et Garçons d’honneur 10h 45 : Entrée des
+          pasteurs 10h 50 : Entrée du Marié et sa Maman 10h 55 : Entrée de la
+          mariée et son papa 11h 00 : Début de la cérémonie 12h 45 : Fin de la
+          cérémonie 13h 00 : Séance Photos et Apéritif Musical 14h 30 : Début du
+          Cocktail
+        </p>
+      </div>
+      <div id="marriage" class="paral marriage-tab text-center">
+        <h1>Mariage Samedi,</h1>
+        21 Décembre 2019 à 11h 00 Jardins les PALETUVIERS – MATANDA à Bonabéri
+        Chères invitées, chers invités, Nous souhaitons également attirer votre
+        attention sur l&#39;heure de début de la cérémonie. Nous voudrions
+        pouvoir débuter la cérémonie à 11h00 précises, afin d’éviter à certains
+        de nos chaleureux convives des bains de soleil interminables…A cet
+        effet, nous vous prions d&#39;arriver au plus tard à 10h15 afin que le
+        protocole d&#39;organisation puisse avoir suffisamment de temps pour
+        vous orienter et vous installer. Ceci permettra également de déployer
+        rapidement des solutions à d&#39;éventuels imprévus. La cérémonie se
+        déroulera en plein air, dans les jardins des PALETUVIERS –MATANDA à
+        l’entrée de Bonabéri. Vous conviendrez avec nous qu&#39;il serait
+        regrettable de débuter cette fête avec des vêtements trempés par de la
+        transpiration. Le succès de cet évènement commence par votre ponctualité
+        ! Pour ceux qui ont des enfants en bas âges, seuls les enfants âgés de 6
+        ans ou moins, pourront accompagner leurs parents. Il nous est difficile
+        de les compter parmi nous, compte tenu de l&#39;organisation mise en
+        place. Nous espérons que vous comprendrez et que vous respecterez cela.
+        Par la même occasion, veuillez préciser si votre enfant (06 ans au
+        moins) est allergique à l&#39;alcool :-)
+      </div>
+      <div id="histoire" class="paral histoire-tab text-center">
+        <h1>OUR LOVE STORY</h1>
+
+        <p>
+          Un signe, encore un signe… puis un autre…… Au cœur des mots, s’est
+          écrit Notre histoire d’amour !!! 13 Mai 2013 : Un vol Royal Air
+          Maroc : Un gars, Une fille…Là où tout a commencé 14 Février 2015 :
+          Officialisation de la team « Ekambi’S » 02 Juin 2015 : Nous sommes
+          devenus parents 21 Décembre 2019 : Bénédiction de la team « Ekambi’S »
+          devant Dieu et vous… « Etre proche de quelqu’un qui te rend heureuse
+          c’est bien, mais être proche de quelqu’un qui ne peut pas être heureux
+          sans toi…c’est mieux »
+        </p>
+      </div>
+
+      <div id="lieu" class="paral lieu-tab text-center">
+        <h1>Lieu</h1>
+        Jardins les PALETUVIERS MATANDA situé à 800 m du rond-point Bonassama, à
+        l’entrée de Bonabéri. Ils sont faciles d’accès. La cérémonie religieuse
+        et le cocktail se tiendront dans les jardins. Nous vous y attendrons à
+        partir de 10h 00.
+      </div>
+      <div id="liste-de-cadeau" class="paral liste-cadeaux-tab text-center">
+        <h1>Liste Cadeaux</h1>
+        liste de cadeau
+      </div>
     </div>
     <footer class="wn-footer">
       <p></p>
@@ -105,6 +188,7 @@
       $(document).ready(function() {
         $("#numberOfDays").text(fnGetDiffDays());
       });
+      $("body").scrollspy({ target: "#main-navbar" });
     </script>
   </body>
 </html>
