fixed a few things

--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
       class="navbar sticky-top navbar-expand-lg navbar-dark bg-marriage-balais"
       style="text-align: center;"
     >
-      <a class="navbar-brand" href="#">#HereComesTheEkambis</a>
+      <a class="navbar-brand" style="font-family: cursive;" href="#"
+        >#HereComesTheEkambis</a
+      >
       <button
         class="navbar-toggler"
         type="button"
@@ -41,7 +43,11 @@
         <span class="navbar-toggler-icon"></span>
       </button>
 
-      <div class="collapse navbar-collapse" id="main-navbar-opt">
+      <div
+        style="font-family: cursive;"
+        class="collapse navbar-collapse"
+        id="main-navbar-opt"
+      >
         <ul class="navbar-nav mx-auto">
           <li class="nav-item active text-center">
             <a class="nav-link" href="#welcome"
@@ -51,14 +57,14 @@
           <li class="nav-item text-center">
             <a class="nav-link" href="#acceuil">Acceuil</a>
           </li>
-          <li class="nav-item text-center">
+          <!-- <li class="nav-item text-center">
             <a class="nav-link" href="#marriage-message">Mariage Message</a>
-          </li>
+          </li> -->
           <li class="nav-item text-center">
             <a class="nav-link" href="#program">Programme de la Journée</a>
           </li>
           <li class="nav-item text-center">
-            <a class="nav-link" href="#marriage">Le Message</a>
+            <a class="nav-link" href="#message">Message</a>
           </li>
           <li class="nav-item text-center">
             <a class="nav-link" href="#histoire">Notre Histoire</a>
@@ -112,7 +118,7 @@
           Cocktail
         </p>
       </div>
-      <div id="marriage" class="paral marriage-tab text-center">
+      <div id="message" class="paral marriage-tab text-center">
         <h1>Mariage Samedi,</h1>
         21 Décembre 2019 à 11h 00 Jardins les PALETUVIERS – MATANDA à Bonabéri
         Chères invitées, chers invités, Nous souhaitons également attirer votre
