--- a/index.html
+++ b/index.html
@@ -141,18 +141,134 @@
         moins) est allergique à l&#39;alcool :-)
       </div>
       <div id="histoire" class="paral histoire-tab text-center">
-        <h1>OUR LOVE STORY</h1>
+        <h1 style="font-family: cursive;">Notre Histoire</h1>
 
-        <p>
-          Un signe, encore un signe… puis un autre…… Au cœur des mots, s’est
-          écrit Notre histoire d’amour !!! 13 Mai 2013 : Un vol Royal Air
-          Maroc : Un gars, Une fille…Là où tout a commencé 14 Février 2015 :
-          Officialisation de la team « Ekambi’S » 02 Juin 2015 : Nous sommes
-          devenus parents 21 Décembre 2019 : Bénédiction de la team « Ekambi’S »
-          devant Dieu et vous… « Etre proche de quelqu’un qui te rend heureuse
-          c’est bien, mais être proche de quelqu’un qui ne peut pas être heureux
-          sans toi…c’est mieux »
-        </p>
+        <ul class="timeline">
+          <li>
+            <div class="timeline-badge">
+              <a><i class="fa fa-circle" id=""></i></a>
+            </div>
+            <div class="timeline-panel">
+              <div class="timeline-heading">
+                <h4>La Rencontre</h4>
+              </div>
+              <div class="timeline-body">
+                <p>
+                  Un vol Royal Air Maroc : Un gars, Une fille…Là où tout a
+                  commencé
+                </p>
+              </div>
+              <div class="timeline-footer">
+                <p class="text-right">13 Mai 2013</p>
+              </div>
+            </div>
+          </li>
+
+          <li class="timeline-inverted">
+            <div class="timeline-badge">
+              <a><i class="fa fa-circle invert" id=""></i></a>
+            </div>
+            <div class="timeline-panel">
+              <div class="timeline-heading">
+                <h4>Naissance De La Team Ekambi</h4>
+              </div>
+              <div class="timeline-body">
+                <p>
+                  Officialisation de la team « Ekambi’S »
+                </p>
+              </div>
+              <div class="timeline-footer">
+                <p class="text-right">14 Février 2015</p>
+              </div>
+            </div>
+          </li>
+
+          <li>
+            <div class="timeline-badge">
+              <a><i class="fa fa-circle" id=""></i></a>
+            </div>
+            <div class="timeline-panel">
+              <div class="timeline-heading">
+                <h4>Arrivée De Princesse Colleen</h4>
+              </div>
+              <div class="timeline-body">
+                <p>
+                  Nous sommes devenus parents
+                </p>
+              </div>
+              <div class="timeline-footer">
+                <p class="text-right">02 Juin 2015</p>
+              </div>
+            </div>
+          </li>
+
+          <li class="timeline-inverted">
+            <div class="timeline-badge">
+              <a><i class="fa fa-circle invert" id=""></i></a>
+            </div>
+            <div class="timeline-panel">
+              <div class="timeline-heading">
+                <h4>Benediction</h4>
+              </div>
+              <div class="timeline-body">
+                <p>
+                  Bénédiction de la team « Ekambi’S » devant Dieu et vous…
+                  « Etre proche de quelqu’un qui te rend heureuse c’est bien,
+                  mais être proche de quelqu’un qui ne peut pas être heureux
+                  sans toi…c’est mieux »
+                </p>
+              </div>
+              <div class="timeline-footer">
+                <p class="text-right">21 Décembre 2019</p>
+              </div>
+            </div>
+          </li>
+
+          <!-- <li>
+            <div class="timeline-badge">
+              <a><i class="fa fa-circle" id=""></i></a>
+            </div>
+            <div class="timeline-panel">
+              <div class="timeline-heading">
+                <h4>Timeline Event</h4>
+              </div>
+              <div class="timeline-body">
+                <p>
+                  Adfertur guttae sapientiae ducitur est Apollonius ut a a his
+                  domino Lycoridem in lucem. Theophile atque bona dei cenam
+                  veniebant est cum. Iusto opes mihi Tyrum in modo compungi
+                  mulierem ubi augue eiusdem ordo quos vero diam omni catervis
+                  famulorum. Bene dictis ut diem finito servis unde.
+                </p>
+              </div>
+              <div class="timeline-footer">
+                <p class="text-right">Mar-01-2014</p>
+              </div>
+            </div>
+          </li> -->
+
+          <!-- <li class="timeline-inverted">
+            <div class="timeline-badge">
+              <a><i class="fa fa-circle invert" id=""></i></a>
+            </div>
+            <div class="timeline-panel">
+              <div class="timeline-heading">
+                <h4>Timeline Event</h4>
+              </div>
+              <div class="timeline-body">
+                <p>
+                  Crede respiciens loco dedit beneficio ad suis alteri si puella
+                  eius in. Acceptis codicello lenonem in deinde plectrum anni
+                  ipsa quod eam est Apollonius.
+                </p>
+              </div>
+              <div class="timeline-footer primary">
+                <p class="text-right">Mar-02-2014</p>
+              </div>
+            </div>
+          </li> -->
+          <li class="clearfix no-float"></li>
+        </ul>
       </div>
 
       <div id="lieu" class="paral lieu-tab text-center">
