added program timeline

--- a/index.html
+++ b/index.html
@@ -109,14 +109,228 @@
       </div>
       <div id="program" class="paral program-tab text-center">
         <h1>Programme</h1>
-        <p>
-          PROGRAMME DE LA JOURNEE 10h : Arrivée des invités et Installation 10h
+        <ul class="timeline">
+          <li>
+            <div class="timeline-badge">
+              <a><i class="fa fa-circle" id=""></i></a>
+            </div>
+            <div class="timeline-panel">
+              <div class="timeline-heading">
+                <h4>Arrivée des invités et Installation</h4>
+              </div>
+              <div class="timeline-body">
+                <!-- <p>
+                  Un vol Royal Air Maroc : Un gars, Une fille…Là où tout a
+                  commencé
+                </p> -->
+              </div>
+              <div class="timeline-footer">
+                <p class="text-right">10h 00</p>
+              </div>
+            </div>
+          </li>
+
+          <li class="timeline-inverted">
+            <div class="timeline-badge">
+              <a><i class="fa fa-circle invert" id=""></i></a>
+            </div>
+            <div class="timeline-panel">
+              <div class="timeline-heading">
+                <h4>Entrée des Demoiselles et Garçons d’honneur</h4>
+              </div>
+              <div class="timeline-body">
+                <!-- <p>
+                  Officialisation de la team « Ekambi’S »
+                   PROGRAMME DE LA JOURNEE 10h : Arrivée des invités et Installation 10h
           30 : Entrée des Demoiselles et Garçons d’honneur 10h 45 : Entrée des
           pasteurs 10h 50 : Entrée du Marié et sa Maman 10h 55 : Entrée de la
           mariée et son papa 11h 00 : Début de la cérémonie 12h 45 : Fin de la
           cérémonie 13h 00 : Séance Photos et Apéritif Musical 14h 30 : Début du
           Cocktail
-        </p>
+                </p> -->
+              </div>
+              <div class="timeline-footer">
+                <p class="text-right">10h 30</p>
+              </div>
+            </div>
+          </li>
+
+          <li>
+            <div class="timeline-badge">
+              <a><i class="fa fa-circle" id=""></i></a>
+            </div>
+            <div class="timeline-panel">
+              <div class="timeline-heading">
+                <h4>Entrée des pasteurs</h4>
+              </div>
+              <div class="timeline-body">
+                <!-- <p>
+                  Nous sommes devenus parents
+                </p> -->
+              </div>
+              <div class="timeline-footer">
+                <p class="text-right">10h 45</p>
+              </div>
+            </div>
+          </li>
+
+          <li class="timeline-inverted">
+            <div class="timeline-badge">
+              <a><i class="fa fa-circle invert" id=""></i></a>
+            </div>
+            <div class="timeline-panel">
+              <div class="timeline-heading">
+                <h4>Entrée du Marié et sa Maman</h4>
+              </div>
+              <div class="timeline-body">
+                <!-- <p>
+                  Bénédiction de la team « Ekambi’S » devant Dieu et vous…
+                  « Etre proche de quelqu’un qui te rend heureuse c’est bien,
+                  mais être proche de quelqu’un qui ne peut pas être heureux
+                  sans toi…c’est mieux »
+                </p> -->
+              </div>
+              <div class="timeline-footer">
+                <p class="text-right">10h 50</p>
+              </div>
+            </div>
+          </li>
+
+          <li>
+            <div class="timeline-badge">
+              <a><i class="fa fa-circle" id=""></i></a>
+            </div>
+            <div class="timeline-panel">
+              <div class="timeline-heading">
+                <h4>Entrée de la mariée et son papa</h4>
+              </div>
+              <div class="timeline-body">
+                <!-- <p>
+                  Nous sommes devenus parents
+
+                  10h 55 : Entrée de la
+          mariée et son papa 11h 00 : Début de la cérémonie 12h 45 : Fin de la
+          cérémonie 13h 00 : Séance Photos et Apéritif Musical 14h 30 : Début du
+          Cocktail
+                </p> -->
+              </div>
+              <div class="timeline-footer">
+                <p class="text-right">10h 55</p>
+              </div>
+            </div>
+          </li>
+
+          <li class="timeline-inverted">
+            <div class="timeline-badge">
+              <a><i class="fa fa-circle invert" id=""></i></a>
+            </div>
+            <div class="timeline-panel">
+              <div class="timeline-heading">
+                <h4>Début de la cérémonie</h4>
+              </div>
+              <div class="timeline-body">
+                <!-- <p>
+                  Bénédiction de la team « Ekambi’S » devant Dieu et vous…
+                  « Etre proche de quelqu’un qui te rend heureuse c’est bien,
+                  mais être proche de quelqu’un qui ne peut pas être heureux
+                  sans toi…c’est mieux »
+                </p> -->
+              </div>
+              <div class="timeline-footer">
+                <p class="text-right">11h 00</p>
+              </div>
+            </div>
+          </li>
+
+          <li>
+            <div class="timeline-badge">
+              <a><i class="fa fa-circle" id=""></i></a>
+            </div>
+            <div class="timeline-panel">
+              <div class="timeline-heading">
+                <h4>Fin de la cérémonie</h4>
+              </div>
+              <div class="timeline-body">
+                <!-- <p>
+                  Nous sommes devenus parents
+
+                  13h 00 : Séance Photos et Apéritif Musical 14h 30 : Début du
+          Cocktail
+                </p> -->
+              </div>
+              <div class="timeline-footer">
+                <p class="text-right">12h 45</p>
+              </div>
+            </div>
+          </li>
+
+          <li class="timeline-inverted">
+            <div class="timeline-badge">
+              <a><i class="fa fa-circle invert" id=""></i></a>
+            </div>
+            <div class="timeline-panel">
+              <div class="timeline-heading">
+                <h4>Séance Photos et Apéritif Musical</h4>
+              </div>
+              <div class="timeline-body">
+                <!-- <p>
+                  Bénédiction de la team « Ekambi’S » devant Dieu et vous…
+                  « Etre proche de quelqu’un qui te rend heureuse c’est bien,
+                  mais être proche de quelqu’un qui ne peut pas être heureux
+                  sans toi…c’est mieux »
+                </p> -->
+              </div>
+              <div class="timeline-footer">
+                <p class="text-right">13h 00</p>
+              </div>
+            </div>
+          </li>
+
+          <li>
+            <div class="timeline-badge">
+              <a><i class="fa fa-circle" id=""></i></a>
+            </div>
+            <div class="timeline-panel">
+              <div class="timeline-heading">
+                <h4>Séance Photos et Apéritif Musical</h4>
+              </div>
+              <div class="timeline-body">
+                <!-- <p>
+                  Nous sommes devenus parents
+
+                   :  :
+                </p> -->
+              </div>
+              <div class="timeline-footer">
+                <p class="text-right">13h 00</p>
+              </div>
+            </div>
+          </li>
+
+          <li class="timeline-inverted">
+            <div class="timeline-badge">
+              <a><i class="fa fa-circle invert" id=""></i></a>
+            </div>
+            <div class="timeline-panel">
+              <div class="timeline-heading">
+                <h4>Début du Cocktail</h4>
+              </div>
+              <div class="timeline-body">
+                <!-- <p>
+                  Bénédiction de la team « Ekambi’S » devant Dieu et vous…
+                  « Etre proche de quelqu’un qui te rend heureuse c’est bien,
+                  mais être proche de quelqu’un qui ne peut pas être heureux
+                  sans toi…c’est mieux »
+                </p> -->
+              </div>
+              <div class="timeline-footer">
+                <p class="text-right">14h 30</p>
+              </div>
+            </div>
+          </li>
+
+          <li class="clearfix no-float"></li>
+        </ul>
       </div>
       <div id="message" class="paral marriage-tab text-center">
         <h1>Mariage Samedi,</h1>
