fixed some booboos

--- a/index.html
+++ b/index.html
@@ -49,13 +49,15 @@
         id="main-navbar-opt"
       >
         <ul class="navbar-nav mx-auto">
-          <li class="nav-item active text-center">
+          <!-- <li class="nav-item active text-center">
             <a class="nav-link" href="#welcome"
               >Marriage <span class="sr-only">(current)</span></a
             >
-          </li>
+          </li> -->
           <li class="nav-item text-center">
-            <a class="nav-link" href="#acceuil">Acceuil</a>
+            <a class="nav-link" href="#acceuil"
+              >Acceuil <span class="sr-only">(current)</span></a
+            >
           </li>
           <!-- <li class="nav-item text-center">
             <a class="nav-link" href="#marriage-message">Mariage Message</a>
@@ -67,7 +69,7 @@
             <a class="nav-link" href="#message">Message</a>
           </li>
           <li class="nav-item text-center">
-            <a class="nav-link" href="#histoire">Notre Histoire</a>
+            <a class="nav-link" href="#histoire">Histoire</a>
           </li>
           <li class="nav-item text-center">
             <a class="nav-link" href="#lieu">Lieu</a>
@@ -333,7 +335,7 @@
         </ul>
       </div>
       <div id="message" class="paral marriage-tab text-center">
-        <h1>Mariage Samedi,</h1>
+        <h1 class="cursive-font">Mariage Samedi,</h1>
         21 Décembre 2019 à 11h 00 Jardins les PALETUVIERS – MATANDA à Bonabéri
         Chères invitées, chers invités, Nous souhaitons également attirer votre
         attention sur l&#39;heure de début de la cérémonie. Nous voudrions
@@ -368,7 +370,7 @@
               </div>
               <div class="timeline-body">
                 <p>
-                  Un vol Royal Air Maroc : Un gars, Une fille…Là où tout a
+                  Un vol Royal Air Maroc : Un gars, Une fille. Là où tout a
                   commencé
                 </p>
               </div>
