added more stuff

--- a/index.html
+++ b/index.html
@@ -83,7 +83,9 @@
     <div data-spy="scroll" data-target="#main-navbar" data-offset="0">
       <div id="welcome" class="jumbotron paral welcome-tab"></div>
       <div id="acceuil" class="paral acceuil-tab text-center">
-        <h1 class="main-h1-size">Julie <i class="fa fa-heart"></i> Sammy</h1>
+        <h1 class="main-h1-size text-center">
+          Julie<i class="fa fa-heart"></i>Sammy
+        </h1>
         <p class="lead">
           Samedi, 21 Décembre 2019 à 11h 00
         </p>
@@ -288,28 +290,7 @@
             </div>
           </li>
 
-          <li>
-            <div class="timeline-badge">
-              <a><i class="fa fa-circle" id=""></i></a>
-            </div>
-            <div class="timeline-panel">
-              <div class="timeline-heading">
-                <h4>Séance Photos et Apéritif Musical</h4>
-              </div>
-              <div class="timeline-body">
-                <!-- <p>
-                  Nous sommes devenus parents
-
-                   :  :
-                </p> -->
-              </div>
-              <div class="timeline-footer">
-                <p class="text-right">13h 00</p>
-              </div>
-            </div>
-          </li>
-
-          <li class="timeline-inverted">
+          <li class="timeline">
             <div class="timeline-badge">
               <a><i class="fa fa-circle invert" id=""></i></a>
             </div>
