added new images

--- a/index.html
+++ b/index.html
@@ -49,19 +49,11 @@
         id="main-navbar-opt"
       >
         <ul class="navbar-nav mx-auto">
-          <!-- <li class="nav-item active text-center">
-            <a class="nav-link" href="#welcome"
-              >Marriage <span class="sr-only">(current)</span></a
-            >
-          </li> -->
-          <li class="nav-item text-center">
+          <li class="nav-item active text-center">
             <a class="nav-link" href="#acceuil"
               >Acceuil <span class="sr-only">(current)</span></a
             >
           </li>
-          <!-- <li class="nav-item text-center">
-            <a class="nav-link" href="#marriage-message">Mariage Message</a>
-          </li> -->
           <li class="nav-item text-center">
             <a class="nav-link" href="#program">Programme de la Journée</a>
           </li>
@@ -92,8 +84,7 @@
         <p class="lead">Jardins les PALETUVIERS – MATANDA à Bonabéri</p>
         <p class="lead">MATANDA à Bonabéri</p>
         <p class="lead">
-          <i class="fa fa-female"></i> <i class="fa fa-male"></i> Code : Tenue
-          de Cocktail
+          <i class="fa fa-female"></i> <i class="fa fa-male"></i> Code : Décontractée/Rustique &amp; Chic
         </p>
       </div>
       <div id="marriage-message" class="paral message-tab text-center">
@@ -478,7 +469,9 @@
       </div>
       <div id="liste-de-cadeau" class="paral liste-cadeaux-tab text-center">
         <h1>Liste Cadeaux</h1>
-        liste de cadeau
+        Nous ne souhaitons pas publier de liste de cadeaux. Une corbeille à
+        enveloppes sera mise à votre disposition lors de la réception. Merci
+        pour votre compréhension.
       </div>
     </div>
     <footer class="wn-footer">
