remve cursive cos why not

--- a/index.html
+++ b/index.html
@@ -28,9 +28,7 @@
       class="navbar sticky-top navbar-expand-lg navbar-dark bg-marriage-balais"
       style="text-align: center;"
     >
-      <a class="navbar-brand" style="font-family: cursive;" href="#"
-        >#HereComesTheEkambis</a
-      >
+      <a class="navbar-brand" style="font-family: cursive;" href="#">#HereComesTheEkambis</a>
       <button
         class="navbar-toggler"
         type="button"
@@ -307,7 +305,7 @@
         </ul>
       </div>
       <div id="message" class="paral marriage-tab text-center">
-        <h1 class="cursive-font">Mariage Samedi,</h1>
+        <h1>Mariage Samedi,</h1>
         21 Décembre 2019 à 11h 00 Jardins les PALETUVIERS – MATANDA à Bonabéri
         Chères invitées, chers invités, Nous souhaitons également attirer votre
         attention sur l&#39;heure de début de la cérémonie. Nous voudrions
