--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       class="navbar sticky-top navbar-expand-lg navbar-dark bg-marriage-balais"
       style="text-align: center;"
     >
-      <a class="navbar-brand" style="font-family: cursive;" href="#">#HereComesTheEkambis</a>
+      <a class="navbar-brand" style="font-family: cursive; color: black;" href="#">#HereComesTheEkambis</a>
       <button
         class="navbar-toggler"
         type="button"
@@ -47,8 +47,8 @@
         id="main-navbar-opt"
       >
         <ul class="navbar-nav mx-auto">
-          <li class="nav-item active text-center">
-            <a class="nav-link" href="#acceuil"
+          <li class="nav-item active text-center" >
+            <a class="nav-link" href="#acceuil" style="color: black;"
               >Acceuil <span class="sr-only">(current)</span></a
             >
           </li>
@@ -467,8 +467,8 @@
       </div>
       <div id="liste-de-cadeau" class="paral liste-cadeaux-tab text-center">
         <h1>Liste Cadeaux</h1>
-        Nous ne souhaitons pas publier de liste de cadeaux. Une corbeille à
-        enveloppes sera mise à votre disposition lors de la réception. Merci
+        Nous ne souhaitons pas publier de liste de cadeaux. <br />Une corbeille à
+        enveloppes sera mise à votre disposition lors de la réception.<br /> Merci
         pour votre compréhension.
       </div>
     </div>
