added more designs

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         aria-expanded="false"
         aria-label="Toggle navigation"
       >
-        <span class="navbar-toggler-icon"></span>
+        <span class="navbar-toggler-icon" style="color: black"></span>
       </button>
 
       <div
@@ -340,8 +340,7 @@
               </div>
               <div class="timeline-body">
                 <p>
-                  Un vol Royal Air Maroc : Un gars, Une fille. Là où tout a
-                  commencé
+                  Un vol Royal Air Maroc <i class="fa fa-plane-departure"></i> Un gars, Une fille… Là où tout a commencé…
                 </p>
               </div>
               <div class="timeline-footer">
@@ -461,8 +460,8 @@
         <h1>Lieu</h1>
         <hr />
         Jardins les PALETUVIERS MATANDA situé à 800 m du rond-point Bonassama, à
-        l’entrée de Bonabéri. Ils sont faciles d’accès. La cérémonie religieuse
-        et le cocktail se tiendront dans les jardins. Nous vous y attendrons à
+        l’entrée de Bonabéri. Ils sont faciles d’accès. <br /> La cérémonie religieuse
+        et le cocktail se tiendront dans les jardins. <br /> Nous vous y attendrons à
         partir de 10h 00.
       </div>
       <div id="liste-de-cadeau" class="paral liste-cadeaux-tab text-center">
